Fix layout issue with bbblogo on android

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -325,7 +325,7 @@
 #registry-list {
     overflow: auto;
     margin: 0 auto;
-    width: 838px;
+    width: 867px;
 }
 #registry-list li {
     float: left;
